--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,32 +13,40 @@ version: '3'
 
 services:
 
+  # Frontend written in React
   frontend:
     container_name: pong-frontend
-    image: pong:frontend
+    image: pong-front:latest
     build: ./frontend
     ports:
-      - "5001:3000"
+      - "${ACCESS_PORT}:3000"
     networks:
       - pong-network
 
-#  backend:
-#    container_name: pong-backend
-#    image: pong:backend
-#    build: ./backend
-#    networks:
-#      - pong-network
-#      - pong-data
+  # Backend written in NestJS
+  backend:
+    container_name: pong-backend
+    image: pong-back:latest
+    build: ./Backend
+    environment:
+      - API_UID=${API_UID}
+      - API_SECRET=${API_SECRET}
+    networks:
+      - pong-network
+      - pong-data
 
+  # Database using PostgreSQL
   database:
     container_name: pong-database
     image: postgres:latest
+    expose:
+      - "5432"
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     networks:
       - pong-data
-    environment:
-      - POSTGRES_USER=pong
-      - POSTGRES_PASSWORD=pong
-      - POSTGRES_DB=pong
 
 networks:
 
