--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,9 @@ services:
       - "${WEB_ACCESS_PORT}:3000"
     environment:
       - REACT_APP_API_PORT=${API_ACCESS_PORT}
+    volumes:
+      - ./frontend/src:/app/src
+      - ./frontend/public:/app/public
 
   # Backend written in NestJS
   backend:
@@ -38,6 +41,8 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
     networks:
       - pong-data
+    volumes:
+      - ./backend/app/src:/app/src
 
   # Database using PostgreSQL
   database:
