--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
       - "${WEB_ACCESS_PORT}:3000"
     environment:
       - REACT_APP_API_PORT=${API_ACCESS_PORT}
+      - REACT_APP_API_UID=${API_UID}
     volumes:
       - ./frontend/src:/app/src
       - ./frontend/public:/app/public
