--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,8 @@ services:
     environment:
       - REACT_APP_API_PORT=${API_ACCESS_PORT}
       - REACT_APP_API_UID=${API_UID}
+
+    # /!\ Dev Mode Only
     volumes:
       - ./frontend/src:/app/src
       - ./frontend/public:/app/public
@@ -42,8 +44,10 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
     networks:
       - pong-data
+
+    # /!\ Dev Mode Only
     volumes:
-      - ./backend/app/src:/app/src
+      - ./backend/src:/app/src
 
   # Database using PostgreSQL
   database:
