--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,11 +23,9 @@ services:
     environment:
       - REACT_APP_API_PORT=${API_ACCESS_PORT}
       - REACT_APP_API_UID=${API_UID}
-
-    # /!\ Dev Mode Only
     volumes:
-      - ./frontend/src:/app/src
-      - ./frontend/public:/app/public
+      - ${PWD}/frontend/src:/app/src
+      - ${PWD}/frontend/public:/app/public
 
   # Backend written in NestJS
   backend:
@@ -42,12 +40,10 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+    volumes:
+      - ${PWD}/backend/src:/app/src
     networks:
       - pong-data
-
-    # /!\ Dev Mode Only
-    volumes:
-      - ./backend/src:/app/src
 
   # Database using PostgreSQL
   database:
@@ -66,3 +62,4 @@ networks:
 
   pong-data:
     driver: bridge
+    name: pong-data
