--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
 	"@nestjs/config": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+	"axios": "^1.4.0",
 
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
