42 Intra Login Fix
Also includes:
 - JWT Secret environement var instead of a temporary hardcoded key
 - Pre-written some requiered entities tables for later
 - Slight docker improvements

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -21,7 +21,8 @@ RUN npm install
 
 # STEP 3: Retrieve configurations
 COPY ./.eslintrc.js .
-COPY ./*.json ./
+COPY ./tsconfig.json .
+COPY ./nest-cli.json .
 
 # STEP 4: Start the application
 CMD ["npm", "run", "start:dev"]
