--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,8 +19,9 @@ services:
     image: pong-front:latest
     build: ./frontend
     ports:
-      - "${WEB_ACCESS_PORT}:3000"
+      - ${WEB_ACCESS_PORT}:${WEB_ACCESS_PORT}
     environment:
+      - PORT=${WEB_ACCESS_PORT}
       - REACT_APP_API_PORT=${API_ACCESS_PORT}
       - REACT_APP_API_UID=${API_UID}
     volumes:
@@ -33,10 +34,11 @@ services:
     image: pong-back:latest
     build: ./backend
     ports:
-      - "${API_ACCESS_PORT}:3000"
+      - ${API_ACCESS_PORT}:3000
     environment:
       - API_UID=${API_UID}
       - API_SECRET=${API_SECRET}
+      - JWT_SECRET=${JWT_SECRET}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
