--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.15.0",
 		"react-scripts": "5.0.1",
 		"axios": "^1.4.0"
 	},
