--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,9 +19,13 @@ services:
     image: pong-front:latest
     build: ./frontend
     ports:
-      - "${WEB_ACCESS_PORT}:3000"
+      - "${WEB_ACCESS_PORT}:${WEB_ACCESS_PORT}"
     environment:
       - REACT_APP_API_PORT=${API_ACCESS_PORT}
+      - REACT_APP_API_UID=${API_UID}
+    volumes:
+      - ${PWD}/frontend/src:/app/src
+      - ${PWD}/frontend/public:/app/public
 
   # Backend written in NestJS
   backend:
@@ -36,6 +40,8 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+    volumes:
+      - ${PWD}/backend/src:/app/src
     networks:
       - pong-data
 
@@ -56,3 +62,4 @@ networks:
 
   pong-data:
     driver: bridge
+    name: pong-data
