--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -19,11 +19,5 @@ WORKDIR ${APP_DIR}
 COPY ./package.json .
 RUN npm install
 
-# STEP 3: Build app
-COPY ./public ./public
-COPY ./src ./src
-RUN npm run build
-
-# STEP 4: Start the application
-EXPOSE 3000
-CMD ["npm", "start"]
+# STEP 3: Start the application
+ENTRYPOINT ["npm", "start"]
