--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,13 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"axios": "^1.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-scripts": "5.0.1",
-		"axios": "^1.4.0"
+		"react-scripts": "5.0.1"
+	},
+	"devDependencies": {
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11"
 	},
 	"scripts": {
 		"start": "react-scripts start",
