--- a/package.json
+++ b/package.json
@@ -1,12 +1,5 @@
 {
   "dependencies": {
-    "@nestjs/common": "^10.1.3",
-    "@nestjs/jwt": "^10.1.0",
-    "@nestjs/passport": "^10.0.0",
-    "bcrypt": "^5.1.1",
-    "react-router-dom": "^6.15.0"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0"
+    "react-scripts": "^5.0.1"
   }
 }
