--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
 		"axios": "^1.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-scripts": "5.0.1"
+		"react-scripts": "5.0.1",
+		"socket.io-client": "^4.7.2"
 	},
 	"devDependencies": {
 		"@babel/plugin-proposal-private-property-in-object": "^7.21.11"
