--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,7 @@ services:
     image: pong-front:latest
     build: ./frontend
     ports:
-      - "${WEB_ACCESS_PORT}:${WEB_ACCESS_PORT}"
+      - "${WEB_ACCESS_PORT}:3000"
     environment:
       - REACT_APP_API_PORT=${API_ACCESS_PORT}
       - REACT_APP_API_UID=${API_UID}
@@ -33,7 +33,7 @@ services:
     image: pong-back:latest
     build: ./backend
     ports:
-      - "${API_ACCESS_PORT}:3000"
+      - "${API_ACCESS_PORT}:3001"
     environment:
       - API_UID=${API_UID}
       - API_SECRET=${API_SECRET}
