--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@fortawesome/free-solid-svg-icons": "^6.4.2",
+		"@fortawesome/react-fontawesome": "^0.2.0",
 		"axios": "^1.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -12,7 +14,9 @@
 	},
 	"devDependencies": {
 		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-		"@types/react": "^18.2.33"
+		"@types/node": "^20.8.9",
+		"@types/react": "^18.2.33",
+		"@types/react-dom": "^18.2.14"
 	},
 	"scripts": {
 		"start": "react-scripts start",
