sucess username ans add assets in backend

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,6 +45,7 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - ${PWD}/backend/src:/app/src
+      - ${PWD}/backend/assets:/app/assets
     networks:
       - pong-data
     restart: always
