--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.7",
     "@nestjs/jwt": "^10.1.1",
+    "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.7",
     "@nestjs/platform-socket.io": "^10.2.6",
