--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,12 @@
 	"dependencies": {
 		"@fortawesome/free-solid-svg-icons": "^6.4.2",
 		"@fortawesome/react-fontawesome": "^0.2.0",
+		"@nestjs/mapped-types": "^2.0.2",
+		"@reduxjs/toolkit": "^1.9.7",
 		"axios": "^1.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-redux": "^8.1.3",
 		"react-router-dom": "^6.15.0",
 		"react-scripts": "^5.0.1",
 		"socket.io-client": "^4.7.2"
