--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
 		"react-redux": "^8.1.3",
 		"react-router-dom": "^6.15.0",
 		"react-scripts": "^5.0.1",
+		"redux-devtools-extension": "^2.13.9",
 		"socket.io-client": "^4.7.2"
 	},
 	"devDependencies": {
