--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
 		"react-redux": "^8.1.3",
 		"react-router-dom": "^6.15.0",
 		"react-scripts": "^5.0.1",
-		"socket.io-client": "^4.7.2"
+		"socket.io-client": "^4.7.2",
+		"styled-components": "^6.1.1"
 	},
 	"devDependencies": {
 		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
