--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "otplib": "^12.0.1",
     "passport": "^0.6.0",
