--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
 		"@fortawesome/react-fontawesome": "^0.2.0",
 		"@nestjs/mapped-types": "^2.0.2",
 		"@reduxjs/toolkit": "^1.9.7",
+		"antd": "^5.11.2",
 		"axios": "^1.5.0",
 		"bootstrap": "^5.3.2",
 		"react": "^18.2.0",
