--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,7 +35,7 @@ services:
     image: pong-back:latest
     build: ./backend
     ports:
-      - "${API_ACCESS_PORT}:3001"
+      - ${API_ACCESS_PORT}:3001
     environment:
       - API_UID=${API_UID}
       - API_SECRET=${API_SECRET}
@@ -59,6 +59,8 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+    volumes:
+      - /var/lib/postgresql/data
     networks:
       - pong-data
     restart: always
